lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:20: error: Double does not take parameters
			pos = sol(i).y()
                                      ^Lander:8: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
	for(i<-0 to getSol.length-1){
             ^